        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=40529
        eventSender.keyDown("delete") incorrectly sends a backspace on some platforms

WebCore:
        * platform/mac/KeyEventMac.mm: (WebCore::PlatformKeyboardEvent::PlatformKeyboardEvent):
        Use virtual key code to force correct character code for clarity. Also, reworded comment,
        since saying that "backspace needs to always be 8" misleadingly implied that it could
        "sometimes" be such without this code.

WebKitTools:
        * DumpRenderTree/mac/EventSendingController.mm:
        (-[EventSendingController keyDown:withModifiers:withLocation:]): We were sending a broken
        event for "delete" - it had virtual key code from forward delete, and text from backspace.
        Fixed "delete" to mean forward delete.

        * DumpRenderTree/chromium/EventSender.cpp: (EventSender::keyDown):
        * DumpRenderTree/gtk/EventSender.cpp: (keyDownCallback):
        * DumpRenderTree/win/EventSender.cpp: (keyDownCallback):
        Mac DRT confusion has propagated to other platforms, fixing those.

LayoutTests:
        * editing/deleting/forward-delete-key-expected.txt: Added.
        * editing/deleting/forward-delete-key.html: Added.
        Added a test for forward delete key working (particularly in DRT, since there was a lot of
        confusion between platform maintainers about it).

        * fast/forms/resources/input-live-pseudo-selectors.js:
        * fast/forms/resources/textarea-live-pseudo-selectors.js:
        These two tests expected that keyDown("delete") executed backward delete, changed them to
        send "\x08" for backspace.



Canonical link: https://commits.webkit.org/52163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61153 268f45cc-cd09-0410-ab3c-d52691b4dbfc